@@ -14,6 +14,7 @@ Changes in openair 0.7-0 [2012-05-30]
 *	New option start.day in cutData that affects most plots;
 	allows users to set start day when type = "weekday"
 *	Allow categorical scales in calendarPlot
+*	Allow two met data sets to be compared in pollutionRose
 
 
 Changes in openair 0.6-0 [2012-04-10]
